@@ -4,6 +4,7 @@ qtwebchannel-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Update debian/watch for the new upstream tarballs naming scheme.
   * Bump Qt build-dependencies to 5.10.1.
+  * Use dh_auto_configure provided by debhelper (closes: #884383).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 21 Feb 2018 01:12:00 +0300
 
